apps/hedgedoc-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-app
  labels:
    app: hedgedoc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hedgedoc
  template:
    metadata:
      labels:
        app: hedgedoc
    spec:
      containers:
        - name: hedgedoc
          image: 291759414346.dkr.ecr.eu-west-2.amazonaws.com/eks-project:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: uploads-store
              mountPath: "/public/uploads"
            - name: global-bundle-volume
              mountPath: "/etc/ssl/certs/global-bundle.pem"
              subPath: global-bundle.pem
      volumes:
        - name: uploads-store
          emptyDir: {}
        - name: global-bundle-volume
          configMap:
            name: global-bundle
---
apiVersion: v1
kind: Service
metadata:
  name: argo-app
spec:
  selector:
    app: hedgedoc
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: app-port
      protocol: TCP
      port: 8080
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: "issuer"
spec:
  ingressClassName: nginx
  rules:
    - host: hedgedoc.networking.rihad.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-app
                port:
                  number: 80
  tls:
    - hosts:
        - hedgedoc.networking.rihad.co.uk
      secretName: hedgedoc-tls
